# ebook-homebrew-rust-client

./: Cargo.toml  README.md  build.rs
.circleci/: config.yml
completions/bash/: ebook-homebrew-rust-client.bash
completions/fish/: ebook-homebrew-rust-client.fish
completions/powershell/: _ebook-homebrew-rust-client.ps1
completions/zsh/: _ebook-homebrew-rust-client
src/: base64.rs  build.rs  cli.rs  lib.rs  main.rs  utils.rs
