[package]
name = "ebook_homebrew_rust_client"
version = "0.1.0"
authors = ["tubone24 <tubo.yyyuuu@gmail.com>"]
description = "Ebook-homebrew Command Line Tools"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
clap = "2.33.0"
rustc-serialize = "0.3"

[build-dependencies]
clap = "2.33.0"
